<resources>
    <string name="app_name">MySteps</string>
    <string name="settings">Settings</string>
    <string name="current_steps">Current Steps:</string>
    <string name="step_goal">Step Goal:</string>
    <string name="calories_burned">Calories Burned:</string>
    <string name="home">home</string>
    <string name="height_cm">Height (cm):</string>
    <string name="slow">Slow</string>
    <string name="average">Average</string>
    <string name="fast">Fast</string>
    <string name="speed">Speed:</string>
    <string name="save">Save</string>
    <string name="weight_kg">weight_kg:</string>
    <string name="today_s_goal">Today\'s Goal:</string>
    <string name="go">Go</string>
    <string name="stop">Stop</string>
    <string name="walk">Walk</string>
    <string name="jog">Jog</string>
    <string name="run">Run</string>
</resources>